--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,10 @@ python-pptx = "^0.6.21"
 python-multipart = "^0.0.6"
 arrow = "^1.2.3"
 chromadb = "^0.3.25"
-pinecone-client = "^2.1.0"
+
+# pinecone-client = "^2.1.0"     # ← VERSIÓN ANTIGUA (comentada)
+pinecone-client = "^3.2.1"       # ← NUEVO: API v3 -- incluye ServerlessSpec
+
 weaviate-client = "^3.12.0"
 pymilvus = "^2.2.2"
 qdrant-client = {version = "^1.0.4", python = "<3.12"}
@@ -41,7 +44,7 @@ motor = "^3.3.2"
 
 [tool.poetry.scripts]
 start = "server.main:start"
-dev = "local_server.main:start"
+dev   = "local_server.main:start"
 
 [tool.poetry.extras]
 postgresql = ["psycopg2cffi"]
@@ -57,7 +60,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-pythonpath = [
-  "."
-]
-asyncio_mode="auto"
+pythonpath = ["."]
+asyncio_mode = "auto"
